# hackathon2phase3

./: PROJECT_SUMMARY.md  README.md
backend/: README.md  pyproject.toml
backend/src/backend/: config.py  database.py  main.py
backend/src/backend/api/: __init__.py  auth.py  dependencies.py  tasks.py
backend/src/backend/domain/: __init__.py  exceptions.py  task.py  task_manager.py
backend/src/backend/models/: __init__.py  task.py  user.py
backend/src/backend/repositories/: __init__.py  task_repository.py  user_repository.py
backend/src/backend/utils/: __init__.py  jwt.py  password.py
chatbot/: CHANGELOG.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  examples.py  pyproject.toml  pytest.ini  quickstart.py
chatbot/src/chatbot/: __main__.py  config.py
chatbot/src/chatbot/agent/: __init__.py  agent.py  prompts.py
chatbot/src/chatbot/api/: __init__.py  client.py
chatbot/src/chatbot/conversation/: __init__.py  context.py
chatbot/src/chatbot/mcp/: __init__.py  executor.py  schemas.py
chatbot/src/chatbot/server/: __init__.py  app.py
chatbot/tests/: conftest.py  test_agent.py  test_api_client.py  test_conversation_context.py  test_e2e.py  test_integration.py
frontend/: package.json
frontend/src/app/: page.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/types/: task.ts  user.ts
history/prompts/001-todo-console-app/: 002-phase-1-todo-console-app-specification.spec.prompt.md  003-phase-1-implementation-plan.plan.prompt.md  004-phase-1-implementation-tasks.tasks.prompt.md
history/prompts/constitution/: 001-create-todo-hackathon-constitution.constitution.prompt.md
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console-app/checklists/: requirements.md
specs/001-todo-console-app/contracts/: task_manager.md
specs/002-fullstack-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-web-app/checklists/: requirements.md
specs/002-fullstack-web-app/contracts/: api-endpoints.md
specs/003-ai-chatbot/: data-model.md
specs/003-ai-chatbot/contracts/: mcp-tools.md
src/todo/: __main__.py
src/todo/cli/: display.py  menu.py
src/todo/domain/: exceptions.py  task.py  (+1 more)
src/todo_console_app.egg-info/: PKG-INFO  SOURCES.txt
(+14 files in other folders)
